# simcommsys-utils

./: .gitignore  README.md  pyproject.toml
Scripts/: cloc.bash  run_tests.bash
TestData/Codes/: .gitignore
TestData/Jobfiles/: jobspec-local-1.yaml  local.yaml  masterslave.yaml
TestData/Simulators/: errors_hamming-random-awgn-bpsk-ldpc.gf2.1024.768.double.gdl.txt  errors_hamming-random-awgn-bpsk-nrcc_133_171.txt  errors_hamming-random-awgn-bpsk-uncoded.txt  errors_hamming-random-qsc-direct-straight-ldpc.gf4.1024.768.double.gdl.txt  errors_hamming-random-qsc-direct-straight-ldpc.gf4.1024.768.double.gdl_cuda.txt
TestData/Templates/awgn/: awgn_mpsk.txt
TestData/Templates/qsc/: qsc_direct.txt
simcommsys_utils/: __main__.py  alist.py  cli.py  executors.py  pchk.py  results.py  run_jobs.py  test.py
