[tool.poetry]
name = "simcommsys-utils"
version = "0.1.0"
description = "A package that aids in building, running and plotting results from Simcommsys systems, timers and simulations."
authors = ["MarkMizzi <mizzimark2001@gmail.com>"]
license = "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
readme = "README.md"
packages = [{include = "simcommsys_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
pyyaml = "^6.0.2"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240917"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simcommsys-utils = 'simcommsys_utils.cli:app'
